@@ -3,6 +3,8 @@ require 'minitest/autorun'
 
 require_relative 'test_botanical_name_utils'
 require_relative 'test_config'
+require_relative 'test_convert'
+require_relative 'test_create'
 require_relative 'test_date_utils'
 require_relative 'test_gps_track'
 require_relative 'test_image'
